--- a/assets/style.css
+++ b/assets/style.css
@@ -184,15 +184,15 @@ html {
 .navbar-menu a {
     color: var(--foreground);
 }
-a.button.vip  {
-    background-color: var(--accent);
+.button.vip  {
+    background-color: var(--accent) !important;
     border-color: var(--accent);
     border-radius: 4px;
     color: var(--foreground);
     font-family: "Druk Wide Medium", sans-serif;
     text-transform: uppercase;
 }
-a.button.vip:hover {
+.button.vip:hover {
     box-shadow: 0 0 10px var(--accent), 0 0 20px var(--accent);
     color: var(--foreground);
 }
@@ -244,11 +244,24 @@ a.button.vip:hover {
 }
 #site #vip .modal-content {
     width: auto;
+    text-transform: uppercase;
 }
 #site #vip .container .section {
     background-color: #000000;
     border: var(--foreground) 1px solid;
     margin: 40px;
+}
+
+#site #vip-total, #site #vip-peers-db, #vip-peers-network {
+    font-family: "Druk Wide Medium";
+}
+.blink {
+    animation: blinker 1.5s linear infinite;
+}
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
 }
 
 .subtitle {
