Implementation of site using yew.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,3 @@
-@import "/node_modules/bulma/css/bulma.min.css";
-@import "/node_modules/@creativebulma/bulma-collapsible/dist/css/bulma-collapsible.min.css";
-@import "/node_modules/bulma-timeline/dist/css/bulma-timeline.min.css";
-@import "./glitch.css";
-
 :root {
     --background: black;
     --foreground: white;
@@ -15,22 +10,22 @@
 
 @font-face {
     font-family: "Druk Wide Medium";
-    src: url("/assets/fonts/7e389c5e310dc537b083e0e25ea6eab5.eot");
+    src: url("/fonts/7e389c5e310dc537b083e0e25ea6eab5.eot");
     src:
-        /*url("/assets/fonts/7e389c5e310dc537b083e0e25ea6eab5.eot?#iefix") format("embedded-opentype"),*/
-            url("/assets/fonts/7e389c5e310dc537b083e0e25ea6eab5.woff2") format("woff2"),
-            url("/assets/fonts/7e389c5e310dc537b083e0e25ea6eab5.woff") format("woff"),
-            url("/assets/fonts/7e389c5e310dc537b083e0e25ea6eab5.ttf") format("truetype"),
-            url("/assets/fonts/7e389c5e310dc537b083e0e25ea6eab5.svg") format("svg");
+        /*url("/fonts/7e389c5e310dc537b083e0e25ea6eab5.eot?#iefix") format("embedded-opentype"),*/
+            url("/fonts/7e389c5e310dc537b083e0e25ea6eab5.woff2") format("woff2"),
+            url("/fonts/7e389c5e310dc537b083e0e25ea6eab5.woff") format("woff"),
+            url("/fonts/7e389c5e310dc537b083e0e25ea6eab5.ttf") format("truetype"),
+            url("/fonts/7e389c5e310dc537b083e0e25ea6eab5.svg") format("svg");
 }
 @font-face{
     font-family: "Jura-Regular";
-    src: url("/assets/fonts/Jura-Regular.eot");
+    src: url("/fonts/Jura-Regular.eot");
     src:
-        /*url("/assets/fonts/Jura-Regular.eot?#iefix") format("embedded-opentype"),*/
-            url("/assets/fonts/Jura-Regular.woff2")format("woff2"),
-            url("/assets/fonts/Jura-Regular.woff")format("woff"),
-            url("/assets/fonts/Jura-Regular.ttf")format("truetype");
+        /*url("/fonts/Jura-Regular.eot?#iefix") format("embedded-opentype"),*/
+            url("/fonts/Jura-Regular.woff2")format("woff2"),
+            url("/fonts/Jura-Regular.woff")format("woff"),
+            url("/fonts/Jura-Regular.ttf")format("truetype");
     font-weight:normal;
     font-style:normal;
     font-display:swap;
@@ -207,7 +202,7 @@ a.button.vip:hover {
 
 /*Site*/
 #site {
-    display: none;
+    /*display: none;*/
 }
 #site .arrow {
     animation: hover 3s infinite ease-in-out;
@@ -349,7 +344,7 @@ a.button.vip:hover {
 }
 
 ul {
-    list-style-image: url('/assets/star.svg');
+    list-style-image: url('/images/star.svg');
     padding-left: 1em;
 }
 li {
