--- a/assets/glitch.css
+++ b/assets/glitch.css
@@ -39,7 +39,7 @@
     left: calc(-1 * var(--gap-horizontal));
     width: calc(100% + var(--gap-horizontal) * 2);
     height: calc(100% + var(--gap-vertical) * 2);
-    background: url(/assets/header.jpg) no-repeat 50% 0;
+    background: url(/images/header.jpg) no-repeat 50% 0;
     background-color: var(--blend-color-1);
     background-size: cover;
     transform: translate3d(0,0,0);
