Added vip list functionality.

--- a/assets/style.css
+++ b/assets/style.css
@@ -179,15 +179,15 @@ html {
 .navbar-menu a {
     color: var(--foreground);
 }
-a.button.vip  {
-    background-color: var(--accent);
+.button.vip  {
+    background-color: var(--accent) !important;
     border-color: var(--accent);
     border-radius: 4px;
     color: var(--foreground);
     font-family: "Druk Wide Medium", sans-serif;
     text-transform: uppercase;
 }
-a.button.vip:hover {
+.button.vip:hover {
     box-shadow: 0 0 10px var(--accent), 0 0 20px var(--accent);
     color: var(--foreground);
 }
@@ -201,9 +201,6 @@ a.button.vip:hover {
 }
 
 /*Site*/
-#site {
-    /*display: none;*/
-}
 #site .arrow {
     animation: hover 3s infinite ease-in-out;
 }
@@ -239,11 +236,34 @@ a.button.vip:hover {
 }
 #site #vip .modal-content {
     width: auto;
+    text-transform: uppercase;
+    max-height: calc(100vh - 100px);
 }
 #site #vip .container .section {
     background-color: #000000;
     border: var(--foreground) 1px solid;
-    margin: 40px;
+}
+#site #vip-total, #site #vip-peers {
+    font-family: "Druk Wide Medium";
+}
+#site #vip-signup.is-hidden {
+    display: unset !important;
+    height: 0;
+    overflow: hidden;
+    max-height: 0;
+    visibility: hidden;
+}
+#site #vip-signup.is-hidden .block, #site #vip-signup.is-hidden .columns {
+    height: 0;
+    margin-bottom: 0;
+}
+.blink {
+    animation: blinker 1.5s linear infinite;
+}
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
 }
 
 .subtitle {
